# auual-report-reader

./: .gitignore  pyproject.toml
components/: llm_blsheet_extractor.py
data/extracted_balance_sheet/: 3m_2022.json  ibm_2023.json
data/query/: eng_query.csv  raw_query.csv
data/reference/: asset_category_reference.txt
experiments/: extract_blsheet.ipynb  retrieve_from_blsheet.ipynb
